# example-cmake-project

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.py  example-run-Unix-Makefiles.sh  example-run-Win-VS2015.bat  example-run-Win-VS2017.bat
cmake/: compiler_options.cmake  rpath.cmake
cmake_modules/: CompilerOptions.cmake  Utils.cmake
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/test-app/: CMakeLists.txt  test-app.cpp
src/lib/: CMakeLists.txt
src/lib/TestPrint/: CMakeLists.txt  TestPrint.cpp  TestPrint.hpp
src/lib/TestPrint/unix/linux/: TestPrintForOS.cpp
src/lib/TestPrint/unix/mac/: TestPrintForOS.cpp
src/lib/TestPrint/windows/: TestPrintForOS.cpp
src/script/: test-script.py
